ab-deployment/app-apple.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  labels:
    app: apple
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: hashicorp/http-echo
        args:
          - "-text=Hello from Apple"
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: LoadBalancer
