ab-deployment/http-banana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  labels:
    app: banana
spec:
  replicas: 3
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
          - "-text=Hello from Banana"
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: LoadBalancer
