ab-deployment/ab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/apple"
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 80
      - path: "/banana"
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 80
